--- a/src/opnsense/service/templates/OPNsense/Trust/openssl.cnf
+++ b/src/opnsense/service/templates/OPNsense/Trust/openssl.cnf
@@ -52,6 +52,14 @@ tsa_policy3 = 1.2.3.4.5.7
 
 [openssl_init]
 providers = provider_sect
+ssl_conf = ssl_sect
+
+[ssl_sect]
+system_default = system_default_sect
+
+[system_default_sect]
+Curves = secp384r1:secp521r1:prime256v1:X25519:X448
+
 
 # List of providers to load
 [provider_sect]
